# api/v1/setting/entity.go
@@ -76,3 +76,28 @@ type Tax struct {
 	Updated        time.Time `db:"updated" json:"updated"`
 	UpdatedBy      string    `db:"updated_by" json:"updated_by"`
 }
+
+type Customer struct {
+	ID                int64     `db:"id" json:"id"`
+	CustomerID        string    `db:"customer_id" json:"customer_id"`
+	OrganizationID    string    `db:"organization_id" json:"organization_id"`
+	Name              string    `db:"name" json:"name"`
+	ContactSalutation string    `db:"contact_salutation" json:"contact_salutation"`
+	ContactFirstName  string    `db:"contact_first_name" json:"contact_first_name"`
+	ContactLastName   string    `db:"contact_last_name" json:"contact_last_name"`
+	ContactEmail      string    `db:"contact_email" json:"contact_email"`
+	ContactPhone      string    `db:"contact_phone" json:"contact_phone"`
+	Country           string    `db:"country" json:"country"`
+	State             string    `db:"state" json:"state"`
+	City              string    `db:"city" json:"city"`
+	Address1          string    `db:"address1" json:"address1"`
+	Address2          string    `db:"address2" json:"address2"`
+	Zip               string    `db:"zip" json:"zip"`
+	Phone             string    `db:"phone" json:"phone"`
+	Fax               string    `db:"fax" json:"fax"`
+	Status            int       `db:"status" json:"status"`
+	Created           time.Time `db:"created" json:"created"`
+	CreatedBy         string    `db:"created_by" json:"created_by"`
+	Updated           time.Time `db:"updated" json:"updated"`
+	UpdatedBy         string    `db:"updated_by" json:"updated_by"`
+}
